--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:oracle:thin:@172.19.1.71:1521:miage
-spring.datasource.username=hr
-spring.datasource.password=hr
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost/fsr
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=190720002020
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
